--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,3 +68,44 @@ MorottajaTest:
     - Morottaja
 
 # Jobs for date go here
+# Build job for Date's unit test for EX3
+Date:
+  # The runner must be able to run and compile Qt projects
+  tags:
+    - qt
+  # Build jobs naturally go to the build stage
+  # We could also have multi-stage builds if needed
+  stage: build
+  # The command line commands we want the CI environment to execute
+  # When the script section starts, the working directory is the repository's root
+  script: 
+    # Go to the correct directory
+    - cd EX3/UnitTests/Date
+    # Run qmake to produce the makefile
+    - qmake
+    # Compile the project using the generated Makefile
+    - make
+    # Clean up the build
+    - make clean
+  # In a distributed CI system we need a way to pass the generated binary between jobs.
+  # GitLab CI provides artifacts to achieve this.
+  artifacts:
+    # Paths to the artifacts we want to pass
+    paths:
+      - EX3/UnitTests/Date/tst_date
+    # How long we store the artifacts in GitLab
+    expire_in: 2d
+
+# Test job for Date's unit test in EX3
+MorottajaTest:
+  tags:
+    - qt
+  stage: test
+  script:
+    # Go to the correct directory
+    - cd EX3/UnitTests/Date
+    # Run the test binary
+    - ./tst_date
+  # On what jobs this dependes on, which artifacts we download for this job
+  dependencies:
+    - Date
