--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ StatisticsUnitTest:
   artifacts:
     # Paths to the artifacts we want to pass
     paths:
-      - StatisticsUnitTest/tst_statisticsunittest.cpp
+      - StatisticsUnitTest/tst_statisticsunittest
     # How long we store the artifacts in GitLab
     expire_in: 2d
 
@@ -43,8 +43,10 @@ StatisticsUnitTest:
     # Go to the correct directory
     - cd StatisticsUnitTest
     # Run the test binary
-    - ./tst_statisticsunittest.cpp
+    - ./tst_statisticsunittest
   # On what jobs this dependes on, which artifacts we download for this job
   dependencies:
-    - StatisticsUnitTest
+    - StatisticsUnitTest.pro
+    - tst_statisticsunittest.cpp
+     
 
