--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ StatisticsUnitTest:
     expire_in: 2d
 
 # Test job for Morottaja's unit test
-StatisticsUnitTest:
+tst_statisticsunittest:
   tags:
     - qt
   stage: test
@@ -44,5 +44,7 @@ StatisticsUnitTest:
     - cd StatisticsUnitTest
     # Run the test binary
     - ./tst_statisticsunittest
-
+  # On what jobs this dependes on, which artifacts we download for this job
+  dependencies:
+    - StatisticsUnitTest
 
