--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@
 
 # We use an image based on Alpine Linux that contains
 # Qt 5.9.6 and the necessary  
+stages:
+  - build
+  - test
 
 # Build job for StatisticsUnitTest's unit test
 StatisticsUnitTest:
